[metadata]
name = Ed2TEI
version = 1.0.0
description = A Python package for coding critical editions into TEI and adding variants, rejected readings, and notes from txt files.
long_description = file: README.md
long_description_content_type = text/markdown
author = Delphine Demelas
author_email = delphine.demelas@gmail.com
url = https://github.com/DelphDem/Ed2TEI
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 4 - Beta
    Intended Audience :: Humanities
    Topic :: Text Processing :: Literature :: Linguistic :: Critical Editions :: TEI

[options]
packages = find:
python_requires = >=3.7
install_requires =
    lxml>=4.6.0

[options.entry_points]
console_scripts =
    create_tei = Ed2TEI.process_text:main
    add_variants = Ed2TEI.add_variants:main
    add_rejected = Ed2TEI.add_rejected:main
    add_notes = Ed2TEI.add_notes:main

[options.package_data]
* = *.xml, *.txt

[bdist_wheel]
universal = 1
